Fixing download mobile title spacing

--- a/src/sass/components/_download-intro.scss
+++ b/src/sass/components/_download-intro.scss
@@ -1,5 +1,5 @@
 .download-intro {
-	@include AU-space( margin-bottom, 4unit );
+	@include AU-space( margin-bottom, 2unit );
 	@include AU-space( padding-top, 4unit );
 }
 
